Fix paragraph spacing for asides

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -719,7 +719,7 @@ aside em {
 }
 
 aside p {
-  margin: 0;
+  margin: 0.5rem 0 !important;
 }
 
 aside.danger {
